--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,9 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Carme&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Expletus+Sans|Warnes&display=swap" rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
 
   <title>Portfolio</title>
 </head>
