--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link
-    href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Comfortaa:wght@700&family=Raleway&family=Roboto&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Raleway:ital,wght@0,700;0,800;1,900&display=swap"
     rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.6/css/mdb.min.css" />
