fixed burger, made border gradient, mobile opt. resume

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,7 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Raleway:ital,wght@0,700;0,800;1,900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Raleway:wght@700&display=swap"
     rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.6/css/mdb.min.css" />
