added skills and strengths

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,6 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Raleway:wght@500&display=swap"
     rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -34,7 +33,7 @@
   <div id="root"></div>
 
   <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
-
+  <script src="https://kit.fontawesome.com/af5c1f2b38.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
